Application almost before deployment